--- a/css/shops.css
+++ b/css/shops.css
@@ -7,29 +7,98 @@
 }
 
 /* Navbar */
-.navbar {
+/* ================= NAVBAR ================= */
+.navbar-custom {
     display: flex;
     justify-content: space-between;
-    padding: 15px 60px;
-    background: #ffffff;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    align-items: center;
+    padding: 18px 70px;
+    background: rgba(255, 255, 255, 0.95);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 6px 25px rgba(0, 0, 0, 0.08);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 
+/* LOGO container */
 .logo {
-    font-weight: bold;
-    font-size: 20px;
+    display: flex;
+    /* horizontal layout */
+    align-items: center;
+    /* vertically center all items */
+    gap: 8px;
+    /* space between icon, image, text */
+    font-size: 26px;
+    /* text size */
+    font-weight: 900;
     color: #4f46e5;
 }
 
-nav a {
-    margin-left: 25px;
+/* span color */
+.logo span {
+    color: #22c55e;
+}
+
+/* Font Awesome icon */
+.logo i {
+    font-size: 28px;
+    color: #4f46e5;
+}
+
+/* Logo image */
+.logo img {
+    height: 35px;
+    /* adjust size as needed */
+    width: auto;
+    display: block;
+}
+
+/* NAVIGATION LINKS */
+.nav-links {
+    display: flex;
+    gap: 25px;
+    align-items: center;
+}
+
+.nav-links a {
     text-decoration: none;
-    color: #555;
-    font-weight: 500;
+    font-size: 17px;
+    font-weight: 600;
+    color: #111827;
+    position: relative;
+    padding: 6px 4px;
 }
 
-nav a.active {
+.nav-links a i {
+    margin-right: 6px;
+    font-size: 15px;
+    color: inherit;
+}
+
+.nav-links a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 0%;
+    height: 3px;
+    background: #22c55e;
+    transition: 0.3s;
+    border-radius: 5px;
+}
+
+.nav-links a:hover::after,
+.nav-links a.active::after {
+    width: 100%;
+}
+
+.nav-links a:hover {
     color: #4f46e5;
+}
+
+.nav-links a.active {
+    color: #22c55e;
 }
 
 /* Hero Section */
@@ -39,13 +108,33 @@ nav a.active {
     text-align: center;
 }
 
-.hero h1 {
-    font-size: 42px;
-    color: #111827;
+
+.animated-title {
+    font-size: 48px;
+    font-weight: 700;
+    /* background: linear-gradient(to right, #303030, #2f4fd8,#4968f1); */
+    color: #2f4fd8;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
+    position: relative;
+    display: inline-block;
+
 }
 
-.hero h1 span {
-    color: #4f46e5;
+/* glowing animated line */
+.animated-title::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -14px;
+    transform: translateX(-50%);
+    width: 60px;
+    height: 4px;
+    background: linear-gradient(90deg, transparent,#000000, #2a20e0,#554dea, transparent);
+    border-radius: 10px;
+    animation: underlineMove 1.6s ease-in-out infinite;
 }
 
 .hero p {
@@ -62,6 +151,10 @@ nav a.active {
     gap: 25px;
     max-width: 900px;
     margin: 50px auto 0;
+}
+
+.categories-decore {
+    text-decoration: none;
 }
 
 .card {
@@ -109,47 +202,421 @@ nav a.active {
 }
 
 /* Footer */
-footer {
+/* Footer */
+
+.footer {
     background: #111827;
-    color: #d1d5db;
-    padding: 50px 20px 20px;
+    color: #E5E7EB;
+    padding: 60px 60px 20px;
 }
 
 .footer-container {
-    max-width: 1100px;
-    margin: auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 40px;
 }
 
-footer h4 {
-    margin-bottom: 15px;
-    color: #fff;
+.footer-logo {
+    font-size: 24px;
+    font-weight: 700;
+    color: #4F46E5;
 }
 
-footer a {
-    display: block;
-    color: #9ca3af;
+.footer-logo span {
+    color: #22C55E;
+}
+
+.footer-col h3 {
+    margin-bottom: 14px;
+    font-size: 18px;
+    color: #ffffff;
+}
+
+.footer-col p {
+    font-size: 14px;
+    line-height: 1.7;
+    color: #D1D5DB;
+}
+
+.footer-col ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-col ul li {
+    margin-bottom: 10px;
+}
+
+.footer-col ul li a {
     text-decoration: none;
-    margin-bottom: 8px;
+    color: #D1D5DB;
+    font-size: 14px;
+    transition: 0.3s;
 }
 
-footer a:hover {
-    color: #fff;
+.footer-col ul li a:hover {
+    color: #22C55E;
+    padding-left: 4px;
 }
 
-footer p {
+/* Bottom bar */
+.footer-bottom {
+    margin-top: 40px;
+    padding-top: 20px;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    text-align: center;
+    font-size: 13px;
+    color: #9CA3AF;
+}
+
+/* Responsive */
+@media(max-width:768px) {
+    .footer {
+        padding: 40px 24px 20px;
+    }
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+    .navbar-custom {
+        flex-direction: column;
+        padding: 15px 25px;
+        gap: 12px;
+    }
+
+    .nav-links {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .hero-content h1 {
+        font-size: 35px;
+    }
+
+    .hero-content p {
+        font-size: 16px;
+    }
+}
+
+/* main Shops page  */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', sans-serif;
+}
+
+/* Navbar */
+.navbar-custom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 18px 70px;
+    background: rgba(255, 255, 255, 0.95);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 6px 25px rgba(0, 0, 0, 0.08);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+.logo {
+    font-size: 26px;
+    font-weight: 900;
+    color: #4f46e5;
+}
+
+.logo span {
+    color: #22c55e;
+}
+
+.nav-links {
+    display: flex;
+    gap: 25px;
+    align-items: center;
+}
+
+.nav-links a {
+    text-decoration: none;
+    font-size: 17px;
+    font-weight: 600;
+    color: #111827;
+    position: relative;
+    padding: 6px 4px;
+    transition: 0.3s;
+}
+
+.nav-links a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 0%;
+    height: 3px;
+    background: #22c55e;
+    transition: 0.3s;
+    border-radius: 5px;
+}
+
+.nav-links a:hover::after,
+.nav-links a.active::after {
+    width: 100%;
+}
+
+.nav-links a:hover {
+    color: #4f46e5;
+}
+
+.nav-links a.active {
+    color: #22c55e;
+}
+
+.btn-business {
+    padding: 10px 20px;
+    background: linear-gradient(135deg, #4f46e5, #22c55e);
+    color: #fff !important;
+    border-radius: 30px;
+    font-weight: bold;
+    box-shadow: 0 5px 15px rgba(79, 70, 229, 0.25);
+    transition: 0.3s;
+}
+
+.btn-business:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 25px rgba(34, 197, 94, 0.3);
+}
+
+/* Hero Section */
+.hero {
+    background: #f9fafb;
+    padding: 80px 20px;
+    text-align: center;
+}
+
+/* .hero h1 {
+    font-size: 42px;
+    color: #111827;
+}
+
+.hero h1 span {
+    background-color: rgb(linear-gradient(47,79,216,0.25))
+} */
+
+.animated-title {
+    font-size: 48px;
+    font-weight: 700;
+    background: linear-gradient(to right, #000000, #9f4ce8);
+    /* -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
+
+    background-clip: text;
+    color: transparent;
+
+    position: relative;
+    display: inline-block;
+
+}
+
+/* glowing animated line */
+.animated-title::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -14px;
+    transform: translateX(-50%);
+    width: 60px;
+    height: 4px;
+    background: linear-gradient(90deg, transparent, #6c63ff, transparent);
+    border-radius: 10px;
+    animation: underlineMove 1.6s ease-in-out infinite;
+}
+
+.hero p {
+    max-width: 700px;
+    margin: 20px auto;
+    color: #6b7280;
+    font-size: 16px;
+}
+
+/* Categories */
+.categories {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 25px;
+    max-width: 900px;
+    margin: 50px auto 0;
+}
+
+.categories-decore {
+    text-decoration: none;
+}
+
+.card {
+    background: white;
+    padding: 30px;
+    border-radius: 14px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.06);
+    transition: 0.3s;
+}
+
+.card:hover {
+    transform: translateY(-6px);
+}
+
+.card i {
+    font-size: 36px;
+    margin-bottom: 15px;
+}
+
+.card h3 {
+    margin-bottom: 5px;
+    color: #111827;
+}
+
+.card p {
+    color: #6b7280;
     font-size: 14px;
 }
 
-footer i {
-    margin-right: 8px;
+/* Icon Colors */
+.blue {
+    color: #2563eb;
 }
 
-.copyright {
-    margin-top: 30px;
+.green {
+    color: #16a34a;
+}
+
+.yellow {
+    color: #f59e0b;
+}
+
+.purple {
+    color: #7c3aed;
+}
+
+/* Footer */
+/* Footer */
+
+.footer {
+    background: #111827;
+    color: #E5E7EB;
+    padding: 60px 60px 20px;
+}
+
+.footer-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 40px;
+}
+
+.footer-logo {
+    font-size: 24px;
+    font-weight: 700;
+    color: #4F46E5;
+}
+
+.footer-logo span {
+    color: #22C55E;
+}
+
+.footer-col h3 {
+    margin-bottom: 14px;
+    font-size: 18px;
+    color: #ffffff;
+}
+
+.footer-col p {
+    font-size: 14px;
+    line-height: 1.7;
+    color: #D1D5DB;
+}
+
+.footer-col ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-col ul li {
+    margin-bottom: 10px;
+}
+
+.footer-col ul li a {
+    text-decoration: none;
+    color: #D1D5DB;
+    font-size: 14px;
+    transition: 0.3s;
+}
+
+.footer-col ul li a:hover {
+    color: #22C55E;
+    padding-left: 4px;
+}
+
+/* Bottom bar */
+.footer-bottom {
+    margin-top: 40px;
+    padding-top: 20px;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
     text-align: center;
     font-size: 13px;
-    color: #9ca3af;
+    color: #9CA3AF;
+}
+
+/* Responsive */
+@media(max-width:768px) {
+    .footer {
+        padding: 40px 24px 20px;
+    }
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+    .navbar-custom {
+        flex-direction: column;
+        padding: 15px 25px;
+        gap: 12px;
+    }
+
+    .nav-links {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .hero-content h1 {
+        font-size: 35px;
+    }
+
+    .hero-content p {
+        font-size: 16px;
+    }
+}
+
+/* Responsive */
+@media(max-width:768px) {
+    .footer {
+        padding: 40px 24px 20px;
+    }
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+    .navbar-custom {
+        flex-direction: column;
+        padding: 15px 25px;
+        gap: 12px;
+    }
+
+    .nav-links {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .hero-content h1 {
+        font-size: 35px;
+    }
+
+    .hero-content p {
+        font-size: 16px;
+    }
 }
