--- a/css/index.css
+++ b/css/index.css
@@ -42,6 +42,9 @@ body {
 /* span color */
 .logo span {
   color: #22c55e;
+  padding-left: 0;
+   display: inline-block;
+  margin-left: -7px;
 }
 
 /* Font Awesome icon */
@@ -510,14 +513,24 @@ body {
   gap: 40px;
 }
 
+/* Logo */
 .footer-logo {
+  display: flex;
+  align-items: center;
+  gap: 8px;
   font-size: 24px;
   font-weight: 700;
   color: #4F46E5;
 }
 
+.footer-logo i {
+  font-size: 26px;
+}
+
 .footer-logo span {
   color: #22C55E;
+   display: inline-block;
+  margin-left: -7px;
 }
 
 .footer-col h3 {
